--- a/test.html
+++ b/test.html
@@ -8,8 +8,13 @@
 </head>
 <body>
 	<h1>Isabella Jakobsen Szállás</h1>
-	<p>About. Publications.</p>
-	<img src="img/me.jpeg">
+	<p>About. </br>
+	Isabella Jakobsen Szállás is a literary translator. Her translations have appeared in Hungarian Literature Online (forthcoming). She took part in Bristol Translates Summer School in 2023, and in a Hungarian Literary Translation course run by the Hungarian-American translator Timea Sipos in 2024. She studied classical languages and literature at UCL, with a dissertation about Miklós Radnóti’s translations from Latin. Isabella is currently based in Cambridge, UK, where in addition to translating, she is working at an anthropology and archaeology museum.</p>
+	<img src="https://media.licdn.com/dms/image/v2/D4E03AQEvDXzN4wVPCg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675814582434?e=1739404800&v=beta&t=igt6bjp7eLk7rrUuUp-q7BvFg7VcfxRZcoOPFNrCQyM">
+	</br>
+	<p>Contact:</p></br>
+	<a href="mailto:isa.h.jakobsen@gmail.com">Email</a>
 	<a href="https://linkedin.com/in/isabella-jakobsen-szallas/" target="_blank">Linkedin</a>
+	<a href="https://instagram.com/isabellajkbsn/" target="_blank">Instagram</a>
 </body>
 </html>
