--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
         <h1>isabella jakobsen szállás</h1>
         <p> hungarian to english translation / fordítás magyarról angolra</p>
         <h2>about.</h2>
-	<p>	Isabella Jakobsen Szállás is a literary translator. Her translations have appeared in Hungarian Literature Online (forthcoming). She took part in Bristol Translates Summer School in 2023, and in a Hungarian Literary Translation course run by the Hungarian-American translator Timea Sipos in 2024. She studied classical languages and literature at UCL, with a dissertation about Miklós Radnóti’s translations from Latin. Isabella is currently based in Cambridge, UK, where in addition to translating, she is working at an anthropology and archaeology museum.</p>
+	<p>	Isabella Jakobsen Szállás is a literary translator. Her translations have appeared in <a href="https://hlo.hu/new-work/panni-puskas-self-pity-in-the-backwaters-of-szigetkoz.html" target="_blank">Hungarian Literature Online</a> (2025). She took part in Bristol Translates Summer School in 2023, and in a Hungarian Literary Translation course run by the Hungarian-American translator Timea Sipos in 2024. She studied classical languages and literature at UCL, with a dissertation about Miklós Radnóti’s translations from Latin. Isabella is currently based in Cambridge, UK, where in addition to translating, she is working at an anthropology and archaeology museum.</p>
 
     <!-- Social Links -->
     <h2>contact.</h2>
@@ -100,7 +100,7 @@
             <a href="https://instagram.com/isabellajkbsn/" target="_blank">instagram</a>
         </div>
     </br>
-            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEvDXzN4wVPCg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675814582434?e=1739404800&v=beta&t=igt6bjp7eLk7rrUuUp-q7BvFg7VcfxRZcoOPFNrCQyM">
+            <img src="https://media.licdn.com/dms/image/v2/D4E03AQEvDXzN4wVPCg/profile-displayphoto-shrink_800_800/profile-displayphoto-shrink_800_800/0/1675814582434?e=1746057600&v=beta&t=NAQ9um-HQMue3TYKU_gDclpBJQw80TPkXCYa6RnUu3E">
         </div>
     </div>
 
